Add 576k BAUD and change the programmer / flash_tool to use this; add cmake parameters for RADIO RATE and RADIO RETRANS TIME

--- a/software/firmware/CMakeLists.txt
+++ b/software/firmware/CMakeLists.txt
@@ -28,6 +28,52 @@ project(FIRMWARE)
 #extract the NRF24 image
 set(NRF24_IMAGE True)
 
+if(RADIO_RATE)
+    if(${RADIO_RATE} MATCHES "250KBS")
+        add_definitions(-DRADIO_RATE=2)
+    elseif(${RADIO_RATE} MATCHES "1MBS")
+        add_definitions(-DRADIO_RATE=1)
+    elseif(${RADIO_RATE} MATCHES "2MBS")
+        add_definitions(-DRADIO_RATE=0)
+    endif()
+endif()
+
+if(RADIO_RT)
+    if(${RADIO_RT} MATCHES "250US")
+        add_definitions(-DRADIO_RT=0)
+    elseif(${RADIO_RT} MATCHES "500US")
+        add_definitions(-DRADIO_RT=1)
+    elseif(${RADIO_RT} MATCHES "750US")
+        add_definitions(-DRADIO_RT=2)
+    elseif(${RADIO_RT} MATCHES "1000US")
+        add_definitions(-DRADIO_RT=3)
+    elseif(${RADIO_RT} MATCHES "1250US")
+        add_definitions(-DRADIO_RT=4)
+    elseif(${RADIO_RT} MATCHES "1500US")
+        add_definitions(-DRADIO_RT=5)
+    elseif(${RADIO_RT} MATCHES "1750S")
+        add_definitions(-DRADIO_RT=6)
+    elseif(${RADIO_RT} MATCHES "2000US")
+        add_definitions(-DRADIO_RT=7)
+    elseif(${RADIO_RT} MATCHES "2250US")
+        add_definitions(-DRADIO_RT=8)
+    elseif(${RADIO_RT} MATCHES "2500US")
+        add_definitions(-DRADIO_RT=9)
+    elseif(${RADIO_RT} MATCHES "2750US")
+        add_definitions(-DRADIO_RT=10)
+    elseif(${RADIO_RT} MATCHES "3000US")
+        add_definitions(-DRADIO_RT=11)
+    elseif(${RADIO_RT} MATCHES "3250US")
+        add_definitions(-DRADIO_RT=12)
+    elseif(${RADIO_RT} MATCHES "3500US")
+        add_definitions(-DRADIO_RT=13)
+    elseif(${RADIO_RT} MATCHES "3750US")
+        add_definitions(-DRADIO_RT=14)
+    elseif(${RADIO_RT} MATCHES "4000US")
+        add_definitions(-DRADIO_RT=15)
+    endif()
+endif()
+
 set(HEADER_INC
     ./bootloader/inc
     ./../libraries/drivers/e2p/inc
