--- a/software/application/CMakeLists.txt
+++ b/software/application/CMakeLists.txt
@@ -26,6 +26,52 @@ if(TASK_TEST)
     add_definitions(-DENABLE_TASK_TEST)
 endif()
 
+if(RADIO_RATE)
+    if(${RADIO_RATE} MATCHES "250KBS")
+        add_definitions(-DRADIO_RATE=2)
+    elseif(${RADIO_RATE} MATCHES "1MBS")
+        add_definitions(-DRADIO_RATE=1)
+    elseif(${RADIO_RATE} MATCHES "2MBS")
+        add_definitions(-DRADIO_RATE=0)
+    endif()
+endif()
+
+if(RADIO_RT)
+    if(${RADIO_RT} MATCHES "250US")
+        add_definitions(-DRADIO_RT=0)
+    elseif(${RADIO_RT} MATCHES "500US")
+        add_definitions(-DRADIO_RT=1)
+    elseif(${RADIO_RT} MATCHES "750US")
+        add_definitions(-DRADIO_RT=2)
+    elseif(${RADIO_RT} MATCHES "1000US")
+        add_definitions(-DRADIO_RT=3)
+    elseif(${RADIO_RT} MATCHES "1250US")
+        add_definitions(-DRADIO_RT=4)
+    elseif(${RADIO_RT} MATCHES "1500US")
+        add_definitions(-DRADIO_RT=5)
+    elseif(${RADIO_RT} MATCHES "1750S")
+        add_definitions(-DRADIO_RT=6)
+    elseif(${RADIO_RT} MATCHES "2000US")
+        add_definitions(-DRADIO_RT=7)
+    elseif(${RADIO_RT} MATCHES "2250US")
+        add_definitions(-DRADIO_RT=8)
+    elseif(${RADIO_RT} MATCHES "2500US")
+        add_definitions(-DRADIO_RT=9)
+    elseif(${RADIO_RT} MATCHES "2750US")
+        add_definitions(-DRADIO_RT=10)
+    elseif(${RADIO_RT} MATCHES "3000US")
+        add_definitions(-DRADIO_RT=11)
+    elseif(${RADIO_RT} MATCHES "3250US")
+        add_definitions(-DRADIO_RT=12)
+    elseif(${RADIO_RT} MATCHES "3500US")
+        add_definitions(-DRADIO_RT=13)
+    elseif(${RADIO_RT} MATCHES "3750US")
+        add_definitions(-DRADIO_RT=14)
+    elseif(${RADIO_RT} MATCHES "4000US")
+        add_definitions(-DRADIO_RT=15)
+    endif()
+endif()
+
 set(HEADER_INC
     ./Scheduler
     ./Abstractization/Sensors/Humidity
@@ -39,6 +85,7 @@ set(HEADER_INC
     ./../libraries/drivers/e2p/inc
     ./../libraries/drivers/wdg/inc
     ./../libraries/modules/nrf24/inc
+    ./../libraries/modules/system-timer/inc
     ./../libraries/hardware/${AVR_MCU}
 )
 include_directories(${HEADER_INC})
@@ -49,11 +96,13 @@ set(SOURCE_FILES
     ./Scheduler/Scheduler.c
     ./Abstractization/Sensors/Humidity/Humidity.c
     ./Communication/Communication.c
+    ./Communication/radio_link.c
+    ./Communication/network_def.c
     ./SwOta/ota.c
 )
 avr_add_executable(app ${SOURCE_FILES})
 
-target_link_libraries(app.elf nrf24_api uart timer wdg nrf24_api)
+target_link_libraries(app.elf nrf24_api uart timer wdg nrf24_api system-timer)
 
 #install binaries
 install(
