Extend the messages functionality to simplify the code design

--- a/software/application/CMakeLists.txt
+++ b/software/application/CMakeLists.txt
@@ -98,6 +98,7 @@ set(SOURCE_FILES
     ./Communication/Communication.c
     ./Communication/radio_link.c
     ./Communication/network_def.c
+    ./Communication/messages.c
     ./SwOta/ota.c
 )
 avr_add_executable(app ${SOURCE_FILES})
