Add code for ds18b20 sensor

--- a/software/CMakeLists.txt
+++ b/software/CMakeLists.txt
@@ -47,6 +47,7 @@ add_subdirectory(libraries/drivers/wdg)
 #compile the libs modules
 add_subdirectory(libraries/modules/nrf24)
 add_subdirectory(libraries/modules/system-timer)
+add_subdirectory(libraries/modules/ds18b20)
 
 #compile the firmware
 add_subdirectory(firmware)
