Add low power module

--- a/software/libraries/modules/LowPower/CMakeLists.txt
+++ b/software/libraries/modules/LowPower/CMakeLists.txt
@@ -19,22 +19,18 @@ cmake_minimum_required(VERSION 2.8)
 set(CMAKE_TOOLCHAIN_FILE "${CMAKE_SOURCE_DIR}/../../../cmake_config/generic-avr-gcc.cmake")
 
 # Name your project
-project(ONEWIRE_TEST)
+project(LOWPOWER)
 
 set(HEADER_INC
-    ./../../libraries/drivers/adc/inc
-    ./../../libraries/drivers/uart/inc
-    ./../../libraries/drivers/wdg/inc
-    ./../../libraries/modules/ds18b20/inc
-    ./../../libraries/modules/LowPower/inc
-    ./../../libraries/hardware/${AVR_MCU}
+    ./inc
+    ./../../hardware/${AVR_MCU}
 )
 include_directories(${HEADER_INC})
 
 set(SOURCE_FILES
-    ./main.c
+    ./src/lowpower.c
 )
-avr_add_executable(onewire_test ${SOURCE_FILES})
-target_link_libraries(onewire_test.elf uart ds18b20 adc lowpower wdg)
+avr_add_library(lowpower ${SOURCE_FILES})
+
 
 
