Add some features to the programmer (sleep)

--- a/software/programmer/CMakeLists.txt
+++ b/software/programmer/CMakeLists.txt
@@ -72,10 +72,13 @@ if(RADIO_RT)
 endif()
 
 set(HEADER_INC
+    ./../libraries/drivers/adc/inc
     ./../libraries/modules/nrf24/inc
     ./../libraries/modules/system-timer/inc
     ./../libraries/drivers/uart/inc
     ./../libraries/drivers/wdg/inc
+    ./../libraries/modules/ds18b20/inc
+    ./../libraries/modules/LowPower/inc
     ./../libraries/hardware/${AVR_MCU}
 )
 include_directories(${HEADER_INC})
@@ -86,7 +89,7 @@ set (SOURCE_FILES
 avr_add_executable(${TARGET_NAME} ${SOURCE_FILES})
 
 #link target with libraries
-target_link_libraries(${TARGET_NAME}.elf nrf24_api uart system-timer wdg)
+target_link_libraries(${TARGET_NAME}.elf nrf24_api uart system-timer wdg ds18b20 adc lowpower)
 
 #set postbuild command to concatenate programmer with nrf24
 add_custom_command(TARGET programmer POST_BUILD
